# ChromaCatch-Go

./: .gitignore  CLAUDE.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: release-client.yaml
scripts/: install_mediamtx.sh  start.sh  start_backend.sh  start_client.sh  test_mouse.py  test_single_calibration.py
services/airplay-client/: pyproject.toml
services/airplay-client/airplay_client/: cli.py  config.py  esp32_forwarder.py  main.py  runtime_lock.py  ws_client.py
services/airplay-client/airplay_client/audio/: __init__.py  airplay_audio_source.py  base.py  factory.py  ffmpeg_audio_source.py
services/airplay-client/airplay_client/capture/: airplay_manager.py  frame_capture.py  h264_capture.py  process_cleanup.py
services/airplay-client/airplay_client/commander/: base.py  esp32_client.py  esp32_commander.py  factory.py  luma3ds_client.py  sysbotbase_client.py  virtual_gamepad.py
services/airplay-client/airplay_client/transport/: __init__.py  base.py  factory.py  failover_transport.py  h264_ws_transport.py  srt_transport.py  webrtc_transport.py  ws_transport.py
services/airplay-client/tests/: conftest.py  test_airplay_manager.py  test_audio_sources.py  test_cli.py  test_command_forwarder.py  test_commander.py  test_esp32_client.py  test_esp32_forwarder.py  test_frame_capture.py  test_h264_capture.py  test_h264_transport.py  test_process_cleanup.py  test_runtime_lock.py  test_stub_commanders.py  test_transport.py  test_webrtc_transport.py  test_ws_client.py
services/backend/: config.py  h264_decoder.py  main.py  mediamtx_manager.py  rtsp_consumer.py  session_manager.py  ws_handler.py
services/backend/cv/: cursor_controller.py
services/backend/mediamtx/: mediamtx.yml
services/backend/tests/: conftest.py  test_backend_api.py  test_cursor_controller.py  test_frame_codec.py  test_h264_decoder.py  test_mediamtx_manager.py  test_messages.py  test_rtsp_consumer.py  test_session_manager.py  test_ws_handler.py
services/backend/tests/integration/: test_client_backend.py
services/esp32/: platformio.ini
services/esp32/lib/ESP32-NimBLE-Combo/: BleComboKeyboard.cpp
services/esp32/src/: main.cpp
services/ios-app/ChromaCatchController/ChromaCatchBroadcast/: BroadcastWSClient.swift  H264Encoder.swift  SampleHandler.swift
services/ios-app/ChromaCatchController/ChromaCatchController/: AppCoordinator.swift  ChromaCatchController.entitlements  ContentView.swift  Info.plist
services/ios-app/ChromaCatchController/ChromaCatchController.xcodeproj/: project.pbxproj
services/ios-app/ChromaCatchLocationControl/ChromaCatchLocationControl/: AppCoordinator.swift  ContentView.swift
services/ios-app/ChromaCatchLocationControl/ChromaCatchLocationControl.xcodeproj/: project.pbxproj
services/ios-location-spoofer/: README.md
services/ios-location-spoofer/ChromaCatchLocationControl/ChromaCatchDNS/: ChromaCatchDNS.entitlements  PacketTunnelProvider.swift
services/location_backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
services/location_backend/tests/: test_location_api.py
services/location_service/: main.py  session_manager.py
services/shared/: constants.py  frame_codec.py  messages.py
services/sniper_service/: Dockerfile  README.md  __init__.py  config.py  main.py  models.py  monitor.py  parser.py  pyproject.toml  service.py
services/sniper_service/tests/: test_discord_ingestion.py  test_monitor.py  test_parser.py  test_sniper_api.py
(+42 files in other folders)
