[tool.poetry]
name = "chromacatch-location"
version = "0.1.0"
description = "ChromaCatch-Go location service - GPS coordinate management"
authors = ["Neil Tapiavala <neil@tapiavala.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
